<resources>
    <string name="app_name">MyTFG</string>
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>
    <string name="firebase_failed">Could not update Firebase Token</string>
    <string name="chooser_title">Choose what to do</string>
    <string name="please_wait">Please wait</string>
    <string name="login_process">Logging in&#8230;</string>
    <string name="login_deleted">Your Login has been removed</string>
    <string name="login_empty">Please enter username and password</string>
    <string name="next_close">Press back again to close the App</string>
    <string name="menutitle_home">Home</string>
    <string name="menutitle_news">News</string>
    <string name="menutitle_calendar">Calendar</string>
    <string name="menutitle_tfg">TFG</string>
    <string name="menutitle_tfg_events">TFG News</string>
    <string name="menutitle_plan">Plan</string>
    <string name="menutitle_exams">Exams</string>
    <string name="menutitle_vrr">VRR</string>
    <string name="menutitle_partners">Partners</string>
    <string name="menutitle_login">Login</string>
    <string name="menutitle_settings">Account &amp; Settings</string>
    <string name="menutitle_about">About this App</string>
    <string name="menutitle_datapolicy">Data Policy</string>
    <string name="menutitle_back">Back</string>
    <string name="menutitle_feedback">Feedback</string>
    <string name="menutitle_more">More</string>
    <string name="menutitle_mytfg">MyTFG</string>
    <string name="menutitle_mytfg_submenu">MyTFG Features</string>
    <string name="menutitle_authmanage">Authentications</string>
    <string name="menutitle_mytfg_start">Home</string>
    <string name="menutitle_mytfg_supportcenter">Supportcenter</string>
    <string name="menutitle_mytfg_supportcenter_tickets">Support Tickets</string>
    <string name="menutitle_mytfg_purchases">Purchases</string>
    <string name="menutitle_mytfg_accounts">Account Management</string>
    <string name="menutitle_mytfg_accounts_search">Search Account</string>
    <string name="menutitle_mytfg_accounts_create">Create Account</string>
    <string name="menutitle_mytfg_settings">Settings</string>
    <string name="menutitle_boosters">TFG Förderverein</string>
    <string name="menutitle_parents">TFG Eltern</string>
    <string name="menutitle_secretary">Office</string>
    <string name="menutitle_foundation">Schulstiftung</string>
    <string name="menutitle_links">Links</string>
    <string name="menutitle_pages">MyTFG Pages</string>
    <string name="menutitle_abbreviations">Abbreviations</string>
    <string name="menutitle_lostandfound">Lost And Found</string>
    <string name="menutitle_wifi">Wifi Scan</string>
    <string name="home_status_title">MyTFG</string>
    <string name="home_news">NEWS</string>
    <string name="home_status_not_loggedin">You are currently not logged in.\nTo use all features of this App please log in.</string>
    <string name="home_status_loggedin">
        You are currently logged in as %1$s.\nYour login will expire at %2$s.\nTap here to manage your login.
    </string>
    <string name="home_welcome_text">
        Welcome, %1$s %2$s!

        You are logged in as %3$s with the username %4$s.

        Your login for grade %5$s is valid until %6$s.
    </string>
    <string name="home_status_action_logout">Logout</string>
    <string name="home_status_action_login">Login</string>
    <string name="news_failed">Could not load News</string>
    <string name="event_calendar_confirm_text">Would you like to add this event to your device calendar?</string>
    <string name="event_calendar_confirm_title">Add to Calendar</string>
    <string name="event_calendar_confirm_yes">Yes</string>
    <string name="event_calendar_confirm_no">Cancel</string>
    <string name="abbr_failed">Could not load Abbreviations</string>
    <string name="abbr_teacher">Teachers</string>
    <string name="abbr_subject">Subjects</string>
    <string name="plan_failed">Plan could not be loaded</string>
    <string name="plan_today">Current day</string>
    <string name="plan_tomorrow">Next day</string>
    <string name="plan_header">Plan</string>
    <string name="subst_header">Substitution</string>
    <string name="comment_header">Comment</string>
    <string name="plan_show_marquee">Show announcements</string>
    <string name="plan_show_absent">Show absent teachers</string>
    <string name="plan_show_time">Show Update time</string>
    <string name="plan_show_exam">Show Exams as PDF</string>
    <string name="plan_absent">Absent teachers</string>
    <string name="plan_marquee">Announcements</string>
    <string name="plan_time">Last Update</string>
    <string name="plan_not_loaded">Plan not loaded</string>
    <string name="plan_loading">Loading plan&#8230;</string>
    <string name="plan_search">Search</string>
    <string name="plan_no_announcements">No announcements</string>
    <string name="plan_no_teachers">No absent teachers</string>
    <string name="plan_no_update">Unknown</string>
    <string name="plan_empty">No entries present</string>
    <string name="exams_tab_title">Grade %s</string>
    <string name="exam_rescheduled">Canceled / Rescheduled</string>
    <string name="exams_show_title">Show Infos</string>
    <string name="exams_info">Exam Info</string>
    <string name="exams_not_loaded">Exams not yet loaded</string>
    <string name="page_datapolicy">Datapolicy</string>
    <string name="page_faq">MyTFG FAQ</string>
    <string name="page_changelog">App Changelog</string>
    <string name="api_offline">No Internet connection</string>
    <string name="api_noauth">No permissions to request the content</string>
    <string name="api_serverfault">Internal Server error</string>
    <string name="api_response">Invalid Server response</string>
    <string name="api_news_error">News could not be loaded</string>
    <string name="api_events_error">Events could not be loaded</string>
    <string name="api_vrr_error">VRR Data could not be loaded</string>
    <string name="api_laf_error">LostAndFound Entries could not be loaded</string>
    <string name="login_title">MyTFG Login</string>
    <string name="login_text">To use this App and all its features you have to login first.</string>
    <string name="login_action">Login</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_successful">Successfully logged in!</string>
    <string name="login_invalid">Username or password not correct</string>
    <string name="login_timeout">No internet connection</string>
    <string name="login_badrequest">Invalid request - is this App outdated?</string>
    <string name="login_badresponse">Returned Server data invalid</string>
    <string name="login_serverfault">Server error</string>
    <string name="login_forgot_password">I Forgot my Password</string>
    <string name="account_info_text">
        Hello, &lt;b>%1$s %2$s&lt;/b>&lt;br/>
        You are currently logged in.&lt;br/>
        Your username is &lt;b>%3$s&lt;/b>&lt;br/>
        The device ID is &lt;b>%4$s&lt;/b>&lt;br/>
        The device name is &lt;b>%5$s&lt;/b>&lt;br/>
        Your login will expire at %6$s&lt;br/>
        Your user type is &lt;b>%7$s&lt;/b>&lt;br/>
        Your class is &lt;b>%8$s&lt;/b>
    </string>
    <string name="logout_action">Logout</string>
    <string name="manage_authentications">Manage Logins</string>
    <string name="account_personal_settings">Personal Settings</string>
    <string name="account_logged_out">You were logged out</string>
    <string name="account_additional_title">Additional classes</string>
    <string name="account_additional_select">Select additional classes</string>
    <string name="account_additional_explanation_pupil">
        As Pupil with class &lt;b>%1$s&lt;/b> you will obtain all entries related to your class.&lt;br/>
        You have the possibility to get information about &lt;b>3&lt;/b> other classes as well.
    </string>
    <string name="account_additional_explanation_teacher">
        As Teacher you will obtain all entries related to you.&lt;br/>
        You have the possibility to get information about multiple other classes as well.
    </string>
    <string name="account_additional_explanation_highlevel">
        As %1$s you will obtain all entries of the plan.&lt;br/>
        Thus you cannot select additional classes.
    </string>
    <string name="account_addional_classes">&lt;b>Additional classes&lt;/b>&lt;br/>%1$s</string>
    <string name="account_addional_classes_none">&lt;i>No additional classes selected&lt;/i></string>
    <string name="account_process">Additional classes are loading</string>
    <string name="account_accept">OK</string>
    <string name="account_discard">Discard</string>
    <string name="account_wlan_title">WLAN "MyTFG"</string>
    <string name="account_wlan_text">Connect to the WLAN "MyTFG"
    \nNote: You have to be in range of the network!</string>
    <string name="account_wlan_password">MyTFG Password</string>
    <string name="account_wlan_username">MyTFG Username</string>
    <string name="account_wlan_connect">Setup</string>
    <string name="account_wlan_empty">Please provide username and password</string>
    <string name="account_wlan_saved">WLAN MyTFG has been configured</string>
    <string name="account_wlan_failed">Configuration of WLAN MyTFG failed</string>
    <string name="account_wlan_version">This feature is available on Jelly Bean+ devices only</string>
    <string name="manage_authentications_active">Active</string>
    <string name="manage_authentications_timedout">Timed Out</string>
    <string name="manage_authentications_timeout_at">Valid until %1$s</string>
    <string name="manage_authentications_timedout_at">Timed out on %1$s</string>
    <string name="manage_authentications_lastused">Last Usage: %1$s</string>
    <string name="manage_authentications_lastgeo">Last Location: %1$s</string>
    <string name="manage_authentications_lastip">Last IP: %1$s</string>
    <string name="manage_authentications_this_device">This Device</string>
    <string name="manage_authentications_dlg_header">Manage Authentication</string>
    <string name="manage_authentications_dlg_this_device">To delete this authentication, log out from this App</string>
    <string name="manage_authentications_dlg_remove">Delete</string>
    <string name="manage_authentications_dlg_cancel">Cancel</string>
    <string name="feedback_hint_title">Provide Feedback</string>
    <string name="feedback_hint_text">
        Please give some feedback how we could improve this App.
        \n We need your feedback to find and fix bugs and to learn about the features you would like this App to have.
        \n The information will be transmitted anonymously, however, to allow us to contact you in case we have any questions,
        we would also like you to give your name and your E-Mail address.
        \n Thank you for helping us!
    </string>
    <string name="feedback_form_title">Feedback</string>
    <string name="feedback_form_stars">How would you rate this App at the moment?</string>
    <string name="feedback_form_like">What do you like about this App?</string>
    <string name="feedback_form_improve">What would you like us to improve?</string>
    <string name="feedback_action">Send Feedback</string>
    <string name="widget_conf_title">MyTFG Widget</string>
    <string name="widget_conf_text">Which Widget would you like to use?</string>
    <string name="widget_nightmode_off">Nightmode Off</string>
    <string name="widget_nightmode_on">Nightmode On</string>
    <string name="widget_nightmode_app">Nightmode from App</string>
    <string name="widget_nightmode_auto">Time-Based Nightmode</string>
    <string name="widget_nightmode_title">Which Design would you like to use?</string>
</resources>