<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
        <item android:id="@+id/mainmenu_start"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menutitle_home" />
        <item android:id="@+id/mainmenu_plan"
            android:icon="@drawable/ic_menu_plan"
            android:title="@string/menutitle_plan" />
        <item android:id="@+id/mainmenu_vrr"
            android:icon="@drawable/ic_menu_vrr"
            android:title="@string/menutitle_vrr" >
        </item>
        <item android:id="@+id/mainmenu_partners"
            android:icon="@drawable/ic_menu_partners"
            android:title="@string/menutitle_partners" >
        </item>
        <item android:id="@+id/mainmenu_links"
            android:icon="@drawable/ic_menu_links"
            android:title="@string/menutitle_links" >
        </item>

    </group>
    <group android:id="@+id/menu_group_2">
        <item android:id="@+id/mainmenu_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menutitle_settings" />
    </group>
    <group android:id="@+id/menu_group_3">
        <item android:id="@+id/mainmenu_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menutitle_about" />
    </group>
</menu>