<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/plan_search"
        android:visible="false"
        app:showAsAction="collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/show_absent"
        android:icon="@drawable/ic_show_absent"
        android:title="@string/plan_show_absent"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/show_marquee"
        android:icon="@drawable/ic_show_marquee"
        android:title="@string/plan_show_marquee"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/show_time"
        android:icon="@drawable/ic_show_time"
        android:title="@string/plan_show_time"
        app:showAsAction="ifRoom" />
</menu>