<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/defaultPadding"
        android:paddingRight="@dimen/defaultPadding"
        android:paddingBottom="@dimen/defaultPadding"
        android:paddingTop="40dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryLight"
        android:text="@string/widget_conf_title"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/defaultPadding">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_nightmode_title" />

        <RadioGroup
            android:layout_width="match_parent"
            android:id="@+id/widget_radiogroup"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:id="@+id/widget_nightmode_off"
                android:text="@string/widget_nightmode_off" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/widget_nightmode_on"
                android:text="@string/widget_nightmode_on"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/widget_nightmode_app"
                android:text="@string/widget_nightmode_app"/>
            <RadioButton
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/widget_nightmode_auto"
                android:text="@string/widget_nightmode_auto"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_conf_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_widget_today"
                style="?attr/AppThemeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cardview_spacing"
                android:layout_marginRight="@dimen/cardview_spacing"
                android:layout_weight="1"
                android:text="@string/plan_today" />

            <Button
                android:id="@+id/button_widget_tomorrow"
                style="?attr/AppThemeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cardview_spacing"
                android:layout_marginRight="@dimen/cardview_spacing"
                android:layout_weight="1"
                android:text="@string/plan_tomorrow" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@color/nm_card"
            android:padding="2dp"
            android:src="@drawable/widget_preview" />

    </LinearLayout>

</LinearLayout>