<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/defaultPadding"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/cardStyle"
            android:padding="@dimen/cardview_spacing"
            android:layout_marginBottom="@dimen/defaultPadding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/cardview_spacing">

                <TextView
                    android:textSize="@dimen/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_title" />
                <TextView
                    android:textSize="@dimen/textDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_text"
                    android:text="@string/login_text" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/cardview_spacing"
            style="?attr/cardStyle"
            android:layout_marginBottom="@dimen/defaultPadding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/cardview_spacing">

                <TextView
                    android:textSize="@dimen/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_action" />

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:lines="1"
                    android:hint="@string/login_hint_username"/>
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/login_button"
                    android:hint="@string/login_hint_password" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@id/login_forgot_password"
                    android:layout_gravity="end"
                    android:id="@+id/login_button"
                    android:text="@string/login_action"
                    style="?attr/AppThemeButton"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/colorGray"
                    android:id="@+id/login_forgot_password"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>